infra/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hospital
  labels:
    name: hospital
    app.kubernetes.io/part-of: hospital-core
